# advent-of-code

./: README.md
aoc2022/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  main.rs  runner.rs
aoc2023/: README.md  makefile
aoc2023/_template/: Cargo.toml
aoc2023/aoc_template/: Cargo.toml
aoc2023/day-01/: Cargo.toml  bench.txt
aoc2023/day-02/: Cargo.toml  bench.txt
aoc2023/day-03/: Cargo.toml  bench.txt
aoc2023/day-04/: Cargo.toml  bench.txt
aoc2023/day-05/: Cargo.toml  bench.txt  notes.md
aoc2023/day-06/: Cargo.toml  bench.txt
aoc2023/day-07/: .gitignore  Cargo.toml  bench.txt
aoc2023/day-07/benches/: bench.rs
aoc2023/day-07/src/: part1.rs  part2.rs
aoc2023/day-08/: .gitignore  Cargo.toml
aoc2023/day-08/benches/: bench.rs
aoc2023/day-08/src/: part1.rs  part2.rs
aoc2023/day-09/: Cargo.toml
aoc2023/day-10/: Cargo.toml
aoc2023/day-11/: Cargo.toml
aoc2023/day-12/: .gitignore  Cargo.toml
aoc2023/day-12/benches/: bench.rs
aoc2023/day-12/src/: part1.rs  part2.rs
aoc2023/day-13/: Cargo.toml
aoc2023/day-14/: Cargo.toml  bench.txt
aoc2023/day-15/: Cargo.toml  bench.txt
aoc2023/day-16/: Cargo.toml  bench.txt
aoc2023/day-17/: .gitignore  Cargo.toml  bench.txt  dijkstra.rs
aoc2023/day-18/: Cargo.toml  bench.txt
aoc2023/day-19/: Cargo.toml  bench.txt
aoc2023/day-20/: Cargo.toml
aoc2023/day-21/: Cargo.toml  bench.txt
aoc2023/day-22/: Cargo.toml
aoc2023/day-22/benches/: bench.rs
aoc2023/day-22/src/: part1.rs  part2.rs
aoc2023/day-23/: Cargo.toml
aoc2023/day-24/: Cargo.toml
aoc2023/day-24/benches/: bench.rs
aoc2023/day-24/src/: part1.rs  part2.rs
aoc2023/day-25/: Cargo.toml  bench.txt  out.dot
aoc2023/day_01/: Cargo.toml  bench.txt
aoc2023/day_02/: Cargo.toml  bench.txt
aoc2023/day_03/: Cargo.toml  bench.txt
aoc2024/: .gitignore  README.md  go.mod  main.go
aoc2024/solutions/: day01.go  day02.go  day03.go  day04.go  day05.go  day06.go  day07.go  day08.go  day09.go  day10.go  day11.go  day12.go  day13.go  day14.go  (+11 more)
(+71 files in other folders)
