[package]
name = "day-07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fxhash = "0.2.1"
reqwest = { version = "0.11.22", features = ["blocking"] }

[dev-dependencies]
divan = "0.1.3"

[[bench]]
name = "bench"
harness = false
