[package]
name = "day-22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
nannou = "0.17"

[dev-dependencies]
divan = "0.1.3"

[[bench]]
name = "bench"
harness = false
