[package]
name = "day-24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
# z3 = "0.12.1"
z3 = {version="0.12", features = ["static-link-z3"]}

[dev-dependencies]
divan = "0.1.3"

[[bench]]
name = "bench"
harness = false
